--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "asmittyagi.dev@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
