--- a/.env
+++ b/.env
@@ -33,6 +33,8 @@ ACCESS_TOKEN_EXPIRY=1d
 REFRESH_TOKEN_SECRET=3fa97e8f92d2c22e4a0bd749fd9e7996
 REFRESH_TOKEN_EXPIRY=10d
 
+RE_AUTH_TOKEN_SECRET=58e9b6a7d9a6b4c4d8d7c3c0b3ajd78hj
+
 # Twilio
 TWILIO_ACCOUNT_SID=your_account_sid_here
 TWILIO_AUTH_TOKEN=your_auth_token_here
